src/objects/PowerLoader__Grid_Framework__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>PowerLoader__Classic_View__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the classic Grid view, pre Spring 2016</description>
        <inlineHelpText>Enable the classic Grid view, pre Spring 2016</inlineHelpText>
        <label>Classic View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Content_Background_Color__c</fullName>
        <defaultValue>&quot;#ffffff&quot;</defaultValue>
        <description>Content Background color. HEX value.</description>
        <inlineHelpText>Content Background color. HEX value.</inlineHelpText>
        <label>Content Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Content_Text_Color__c</fullName>
        <defaultValue>&quot;#000000&quot;</defaultValue>
        <description>Content Text Color. HEX value.</description>
        <inlineHelpText>Content Text Color. HEX value.</inlineHelpText>
        <label>Content Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Form_Header_Text_Color__c</fullName>
        <defaultValue>&quot;#000000&quot;</defaultValue>
        <description>Form Header Text Color. HEX value.</description>
        <inlineHelpText>Form Header Text Color. HEX value.</inlineHelpText>
        <label>Form Header Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Grid_Components_Main_Color__c</fullName>
        <defaultValue>&quot;#a7b8d1&quot;</defaultValue>
        <description>Grid components (headers and borders) color. HEX value.</description>
        <inlineHelpText>Grid components (headers and borders) color. HEX value.</inlineHelpText>
        <label>Grid Components Main Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Header_Text_Color__c</fullName>
        <defaultValue>&quot;#ffffff&quot;</defaultValue>
        <description>Header text Color. HEX value.</description>
        <inlineHelpText>Header text Color. HEX value.</inlineHelpText>
        <label>Header Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Menu_and_Toolbar_Text_Color__c</fullName>
        <defaultValue>&quot;#4f6a92&quot;</defaultValue>
        <description>Menu and Toolbar Text Color. HEX value.</description>
        <inlineHelpText>Menu and Toolbar Text Color. HEX value.</inlineHelpText>
        <label>Menu and Toolbar Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Page_Background_Color__c</fullName>
        <defaultValue>&quot;#ffffff&quot;</defaultValue>
        <description>Page Background color. HEX value.</description>
        <inlineHelpText>Page Background color. HEX value.</inlineHelpText>
        <label>Page Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Selection_Color__c</fullName>
        <defaultValue>&quot;#b3d3ff&quot;</defaultValue>
        <description>Selection color. HEX value.</description>
        <inlineHelpText>Selection color. HEX value.</inlineHelpText>
        <label>Selection Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Selection_Text_Color__c</fullName>
        <defaultValue>&quot;#000000&quot;</defaultValue>
        <description>Selection Text Color. HEX value.</description>
        <inlineHelpText>Selection Text Color. HEX value.</inlineHelpText>
        <label>Selection Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Toolbar_Background_Color__c</fullName>
        <defaultValue>&quot;#eef1f6&quot;</defaultValue>
        <description>Toolbar Background color. HEX value.</description>
        <inlineHelpText>Toolbar Background color. HEX value.</inlineHelpText>
        <label>Toolbar Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>Grid Framework</label>
</CustomObject>